fix - profile image padding on mobile view

--- a/style.scss
+++ b/style.scss
@@ -135,7 +135,6 @@ img {
   margin-left: auto;
   margin-right: auto;
   padding-bottom: 20px;
-  padding-top: 20px;
 }
 
 // Fixes images in popup boxes from Google Translate
